# HaskellProgramming

./: Ch10.hs  Ch11.hs  Ch15.hs  Ch16.hs  Ch17.hs  Ch18.hs  Ch23.hs  Ch24.hs  Ch7.hs  Ch8.hs  Ch9.hs  ch3.hs  ch6.hs
Notes/: Ch10.txt  Ch11.txt  Ch14.txt  Ch15.txt  Ch16.txt  Ch17.txt  Ch18.txt  (+1 more)
ch14/: Ch14.hs  ch14.cabal
ch14/.stack-work/install/x86_64-osx/lts-13.13/8.6.4/flag-cache/: HUnit-1.6.0.0-C6N9GX1vz2Z4nPL5JbE3ac  QuickCheck-2.12.6.1-CG92sgzQynB255SN47n2RX  ansi-terminal-0.8.2-LZ54B5ErqCiIlNwOVvnj65  call-stack-0.1.0-J1eWgTNOnM4IGVyeW0v2YZ  ch14-0.1.0.0-4JdhMeBvoQCjBui7BDh4u  clock-0.7.2-6GYCAXixqb8FuS0ooeoDbD  colour-2.3.4-BYzTQyKoQ9LK29pbkBo2SY  erf-2.0.0.0-ExhHoenPosmHlOroBQQced  hspec-2.6.1-5G4myAkZB4zR4NJhZ7JfA  hspec-core-2.6.1-2iCrYME7JwD9bvmKrUOcsP  hspec-discover-2.6.1-GcEMs7l4z3NWJQPD5eMXU  hspec-expectations-0.8.2-xEhsaJyqHC4OUn6v2CIJJ  primitive-0.6.4.0-ILgywxtLpvnAOlEISPpP5b  quickcheck-io-0.2.0-FCQ3WLMxx6eBt09PaQOhVX  random-1.1-3ypV4EIycgb35PKjTYYr5q  setenv-0.1.1.3-HP1VaXwIiC57fC12rF12pz  tf-random-0.5-IjFVdJXpGgq3hBuRJiaT27
ch14/.stack-work/install/x86_64-osx/lts-13.13/8.6.4/lib/x86_64-osx-ghc-8.6.4/: libHSch14-0.1.0.0-3UYADJL4zarCGY0QMzdwGk-ghc8.6.4.dylib
ch14/.stack-work/install/x86_64-osx/lts-13.13/8.6.4/lib/x86_64-osx-ghc-8.6.4/ch14-0.1.0.0-3UYADJL4zarCGY0QMzdwGk/: Ch14.dyn_hi  Ch14.hi
ch14/.stack-work/install/x86_64-osx/lts-13.13/8.6.4/lib/x86_64-osx-ghc-8.6.4/ch14-0.1.0.0-4JdhMeBvoQCjBui7BDh4u/: Ch14.dyn_hi  Ch14.hi
ch14/.stack-work/install/x86_64-osx/lts-13.13/8.6.4/pkgdb/: ch14-0.1.0.0-3UYADJL4zarCGY0QMzdwGk.conf  package.cache
