name:          ch14
version:       0.1.0.0
license-file:  LICENSE
author:        Parisa Ataei
maintainer:    ataeip@oregonstate.edu
category:      Text
build-type:    Simple
cabal-version: >= 1.10
library
  exposed-modules:  Ch14
  ghc-options:      -Wall -fwarn-tabs
  build-depends:    base >=4.7 && <5
                    , hspec
                    , QuickCheck
  hs-source-dirs:   .
  default-language: Haskell2010
